                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-08-2006 changed: Better support for xbox memory units.
 - 22-08-2006 fixed: "hide media extensions" works on virtual folders like playlists, archives, etc.
 - 22-08-2006 updated: libsmbclient to 3.0.23b, fixes some signing issues and some bugs with landrives
 - 21-08-2006 fixed: Window translator for loginscreen did not work, like when you did "site activatewindow(loginscreen)" (Thnx to Spiff).
 - 21-08-2006 fixed: if video was zoomed in so that part of video was rendered above top of display, artifacts in the form of lines would appear using HQ Renderer.
 - 20-08-2006 fixed: playlist support from the music library view
 - 20-08-2006 fixed: 8-bit audio playback was distorted.
 - 18-08-2006 fixed: flattening of dvd games.
 - 17-08-2006 fixed: slow queuing by allowing python xbmc.PlayList(0)[i].getduration() to load the tag if necessary. python guru's please test!
 - 17-08-2006 fixed: mockup with dual ids in anything based on guidialogsettings.
 - 16-08-2006 fixed: mockup with restart video in context menu.
 - 15-08-2006 fixed: [ 1536827 ] Problem w/ keymap.xml
 - 14-08-2006 fixed: xbe's with no title id said was added to the program db each time you listed the bookmark.
 - 14-08-2006 changed: potentially fixed seeking in files larger than 2gb with dvdplayer.
 - 14-08-2006 changed: logging off now leaves master mode.
 - 14-08-2006 fixed: shoutcast sorting sometimes didn't allow user to change order and locked in reverse sorting
 - 14-08-2006 changed: better repeat code for gamepad navigation. speed increases in 3 steps